--- a/Projekat/app/src/main/res/layout/activity_main.xml
+++ b/Projekat/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="100dp"
+        android:singleLine="true"
         android:ems="10"
         android:hint="@string/username"
         android:layout_gravity="center"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:singleLine="true"
         android:ems="10"
         android:paddingTop="50dp"
         android:hint="@string/password"
