--- a/Projekat/app/src/main/res/layout/activity_register.xml
+++ b/Projekat/app/src/main/res/layout/activity_register.xml
@@ -15,12 +15,14 @@
             android:id="@+id/usernameRegID"
             android:hint="@string/username"
             android:layout_width="wrap_content"
+            android:singleLine="true"
             android:layout_height="wrap_content"
             android:ems="8"/>
         <EditText
             android:id="@+id/firstNameID"
             android:hint="@string/FirstName"
             android:layout_marginLeft="30dp"
+            android:singleLine="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="8"/>
@@ -37,12 +39,14 @@
             android:inputType="textPassword"
             android:hint="@string/password"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="8"/>
         <EditText
             android:id="@+id/lastNameID"
             android:hint="@string/LastName"
+            android:singleLine="true"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
@@ -58,6 +62,7 @@
         <EditText
             android:id="@+id/emailRegID"
             android:hint="@string/email"
+            android:singleLine="true"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
