--- a/Projekat/app/src/main/res/layout/activity_main.xml
+++ b/Projekat/app/src/main/res/layout/activity_main.xml
@@ -13,58 +13,49 @@
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="100dp"
-        android:singleLine="true"
+        android:layout_gravity="center"
         android:ems="10"
         android:hint="@string/username"
-        android:layout_gravity="center"
-        />
+        android:paddingTop="100dp"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:singleLine="true"
         android:ems="10"
-        android:paddingTop="50dp"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingTop="50dp"
+        android:singleLine="true"
 
         />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/loginID"
-            android:text="@string/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="100dp"
             android:enabled="false"
-            />
+            android:text="@string/login" />
 
         <Button
             android:id="@+id/registerID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:layout_marginLeft="100dp"
-            android:text="@string/register"
-            />
-
+            android:layout_marginTop="100dp"
+            android:text="@string/register" />
 
 
     </LinearLayout>
-
-
-
-
-
 
 
 </LinearLayout>
