--- a/Projekat/app/src/main/res/layout/activity_contacts.xml
+++ b/Projekat/app/src/main/res/layout/activity_contacts.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,32 +16,15 @@
 
     </Button>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/LogOutID"
+        android:id="@+id/contactListID">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_action_name"
-
-            >
-
-        </ImageView>
-
-        <TextView
-
-            android:id="@+id/MyFriendTextClickID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:clickable="true"
-            android:text="@string/myFriend"
-            android:textSize="20sp">
-
-        </TextView>
-
-    </LinearLayout>
+    </ListView>
 
 
-</LinearLayout>
+
+</RelativeLayout>
