--- a/Projekat/app/src/main/res/layout/activity_message.xml
+++ b/Projekat/app/src/main/res/layout/activity_message.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+
     tools:context="marko.milosavljevic.chatapplication.MessageActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/messageActvLogOutBtnID"
@@ -18,34 +15,44 @@
             android:layout_marginLeft="270dp"
             android:text="@string/logOut" />
 
-    </LinearLayout>
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/massageTextID"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="32dp"
+        android:ems="12"
+        android:hint="@string/messageText" />
+
+    <Button
+        android:id="@+id/sendBtnID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignBottom="@+id/massageTextID"
+        android:layout_alignStart="@+id/messageActvLogOutBtnID"
+        android:enabled="false"
+        android:text="@string/Send" />
+
+    <ListView
+        android:id="@+id/messageListID"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/sendBtnID"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/messageActvLogOutBtnID" />
+
+    <TextView
+        android:id="@+id/contactNameID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/messageListID"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/sendBtnID" />
 
 
-        <EditText
-            android:id="@+id/massageTextID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="400dp"
-            android:ems="12"
-            android:hint="@string/messageText" />
-
-        <Button
-            android:id="@+id/sendBtnID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="400dp"
-            android:enabled="false"
-            android:text="@string/Send"
-
-            />
-
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
