--- a/Projekat/app/src/main/res/layout/activity_message.xml
+++ b/Projekat/app/src/main/res/layout/activity_message.xml
@@ -7,52 +7,65 @@
 
     tools:context="marko.milosavljevic.chatapplication.MessageActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/contactNameID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
+            android:layout_weight="1"
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/messageActvLogOutBtnID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="270dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:text="@string/logOut" />
 
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/massageTextID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="32dp"
-        android:ems="12"
-        android:hint="@string/messageText" />
-
-    <Button
-        android:id="@+id/sendBtnID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_alignBottom="@+id/massageTextID"
-        android:layout_alignStart="@+id/messageActvLogOutBtnID"
-        android:enabled="false"
-        android:text="@string/Send" />
 
     <ListView
         android:id="@+id/messageListID"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/sendBtnID"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/messageActvLogOutBtnID" />
-
-    <TextView
-        android:id="@+id/contactNameID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/messageListID"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/sendBtnID" />
+        android:layout_marginBottom="55dp"
+        android:layout_marginTop="60dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="460dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/massageTextID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:ems="12"
+            android:hint="@string/messageText" />
+
+        <Button
+            android:id="@+id/sendBtnID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="25dp"
+            android:enabled="false"
+            android:text="@string/Send" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
