--- a/Projekat/app/src/main/res/layout/row_item.xml
+++ b/Projekat/app/src/main/res/layout/row_item.xml
@@ -7,16 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/letterID"
-            android:background="@color/textColor"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:gravity="center"
             android:layout_alignBottom="@+id/imageView"
+            android:background="@color/textColor"
+            android:gravity="center"
             android:textColor="@color/colorPrimary"
             android:textSize="20dp"></TextView>
 
@@ -35,8 +34,8 @@
             android:id="@+id/imageViewID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_alignParentRight="true"
+            android:layout_gravity="center"
             android:background="@drawable/ic_action_name"
             android:clickable="true" />
     </LinearLayout>
