--- a/Projekat/app/src/main/res/layout/row_item_messages.xml
+++ b/Projekat/app/src/main/res/layout/row_item_messages.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/rowItemMessageID"
-        android:background="@color/textColor" />
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:gravity="center_vertical|left" />
 
 
 </RelativeLayout>
