--- a/Projekat/app/src/main/res/layout/activity_message.xml
+++ b/Projekat/app/src/main/res/layout/activity_message.xml
@@ -20,6 +20,12 @@
             android:layout_marginTop="7dp"
             android:layout_weight="1"
             android:textSize="18dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/refresh_messages"
+            android:text="@string/refresh"/>
+
 
         <Button
             android:id="@+id/messageActvLogOutBtnID"
